<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<parent>
		<groupId>com.github.cfparser</groupId>
		<artifactId>cfparser</artifactId>
		<version>2.2.10</version>
	</parent>
	
<properties>
    <antlr4.visitor>true</antlr4.visitor>
    <antlr4.listener>true</antlr4.listener>
  </properties>

	<modelVersion>4.0.0</modelVersion>
	<artifactId>cfml.parsing</artifactId>
	<packaging>jar</packaging>

	<dependencies>
		<dependency>
      	    <groupId>${project.groupId}</groupId>
        	<artifactId>cfml.dictionary</artifactId>
        	<version>2.2.10</version>
        </dependency>

		<dependency>
			<groupId>net.htmlparser.jericho</groupId>
			<artifactId>jericho-html</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>stringtemplate</artifactId>
			<version>4.0.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>4.5.1-1</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>javolution</groupId>
			<artifactId>javolution</artifactId>
			<version>5.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.21</version>
		</dependency>
		<dependency>
    		<groupId>org.slf4j</groupId>
    		<artifactId>slf4j-simple</artifactId>
    		<version>1.7.21</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>
	</dependencies>
	<build>
	    <plugins>
			<!-- Antlr sources -->
			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.5.1-1</version>
				<executions>
					<execution>
						<id>run antlr4</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Antlr sources -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${basedir}/target/generated-sources/antlr4</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.0</version>
        <configuration>
           <source>1.7</source>
           <target>1.7</target>
       </configuration>
	   </plugin>
	   <plugin>
		   	<groupId>org.apache.maven.plugins</groupId>
		   	<artifactId>maven-surefire-plugin</artifactId>
		   	<version>2.18.1</version>
		   	<configuration>
		   		<forkCount>1</forkCount>
		   		<reuseForks>true</reuseForks>
		   		<argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
	   	</configuration>
			  </plugin>
		</plugins>
	</build>
</project>
